--- a/css/global.css
+++ b/css/global.css
@@ -16,7 +16,7 @@ body {
     font-size: 20px;
     font-weight: 400;
     color: #fff;
-    background-color: #000;
+    background-color: #1b1a1b;
 }
 
 img,
