--- a/css/contacts.css
+++ b/css/contacts.css
@@ -3,7 +3,8 @@
     font-weight: 700;
     line-height: 28px;
     padding-top: 50px;
-    padding-bottom: 101px;
+    padding-bottom: 50px;
+    background: linear-gradient(#1b1a1b, #370a37);
 }
 
 .contacts__subtitle {
@@ -39,4 +40,32 @@
     display: inline-block;
     margin-right: 30px;
     vertical-align: middle;
+}
+
+.contacts__box {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 156px;
+}
+
+.contacts__map {
+    width: 680px;
+    height: 274px;
+}
+
+.contacts__map-img {
+    width: 100%;
+    height: 274px;
+    object-fit: cover;
+}
+
+.contacts__copyright-list {
+    display: flex;
+    justify-content: space-between;
+}
+
+.contacts__copyright-text {
+    font-weight: 400;
+    font-size: 14px;
+    text-align: right;
 }
