--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 @import url(normalize.css);
 @import url(global.css);
+@import url(header.css);
 @import url(banner.css);
+@import url(relax.css);
 @import url(hall.css);
 @import url(booking.css);
 @import url(about.css);
