--- a/css/header.css
+++ b/css/header.css
@@ -31,7 +31,7 @@
     font-size: 22px;
     text-transform: uppercase;
     color: #fff;
-    background-color: #000;
+    background-color: transparent;
     border: 3px solid #cd06ff;
     border-radius: 10px;
     line-height: 30px;
