--- a/css/about.css
+++ b/css/about.css
@@ -78,11 +78,12 @@
     object-position: top;
     border-radius: 50px;
     margin-right: 20px;
-    vertical-align: top;
+    vertical-align: middle;
 }
 
 .signature__text {
     display: inline-block;
     max-width: 278px;
     white-space: break-spaces;
+    vertical-align: middle;
 }
