--- a/css/booking.css
+++ b/css/booking.css
@@ -45,6 +45,7 @@
     background-color: #fff;
     font-weight: 700;
     font-size: 30px;
+    line-height: 40px;
     line-height: 55px;
     text-align: center;
     text-transform: uppercase;
@@ -54,24 +55,29 @@
 .form__label-btn:hover {
     border: 3px solid #640aa3;
     background-color: #eadeed;
+    transition: background-color 0.4s ease, border 0.4s ease;
 }
 
 .form__label-btn:focus {
     border: 3px solid #640aa3;
     background-color: #fff;
+    transition: background-color 0.4s ease, border 0.4s ease;
 }
 
 .form__label-btn:active {
     border: 3px solid #fff;
     background-color: #6c0287;
+    transition: background-color 0.4s ease, border 0.4s ease;
 }
 
 .form__input-radio:focus {
     outline: 1px solid #cd06ff;
+    transition: outline 0.4s ease;
 } 
 
 .form__input-radio:focus, .form__input-fun:focus, .form__input-data:focus, .form__input-email:focus {
     outline: 1px solid #cd06ff;
+    transition: outline 0.4s ease;
 }
 
 .form__input-hall {
@@ -169,17 +175,20 @@
 }
 
 .booking__button:hover {
-    background-color: #eadeed;
+    background-color: #eadedd;
     border: 3px solid #6c0287;
+    transition: background-color 0.4s ease, border 0.4s ease;
 }
 
 .booking__button:focus {
     background-color: #fff;
     border: 3px solid #6c0287;
+    transition: background-color 0.4s ease, border 0.4s ease;
 }
 
 .booking__button:active {
     background-color: #eadeed;
+    transition: background-color 0.4s ease;
 }
 
 .form__input-email {
