--- a/css/header.css
+++ b/css/header.css
@@ -40,15 +40,18 @@
 .header__button:hover {
     border: 0;
     background-color: #6c0287;
+    transition: background-color 0.4s ease;
 } 
 
 .header__button:focus {
     border: 0;
     background-color: #6c0287;
+    transition: background-color 0.4s ease;
 }
 
 .header__button:active {
     border: 1px solid #000;
     background-color: #640aa3;
+    transition: background-color 0.4s ease;
 }
 
