--- a/css/banner.css
+++ b/css/banner.css
@@ -50,7 +50,7 @@
 .banner__hall-text {
     font-weight: 900;
     font-size: 100px;
-    color: #cd06ff;
+    color: var(--color-bright-purple, #cd06ff);
     text-align: center;
     line-height: 141px;
 }
@@ -63,7 +63,7 @@
     font-weight: 900;
     font-size: 60px;
     text-transform: uppercase;
-    color: #cd06ff;
+    color: var(--color-bright-purple, #cd06ff);
     text-align: center;
     line-height: 106px;
 }
@@ -81,24 +81,24 @@
     font-weight: 700;
     font-size: 26px;
     text-transform: uppercase;
-    color: #fff;
-    background: #6c0287;
+    color: var(--color-white, #fff);
+    background-color: var(--color-purple, #6c0287);
     border: none;
     border-radius: 10px;
 }
 
 .banner__button:hover {
-    background-color: #840aa3;
+    background-color: var(--color-light-purple, #840aa3);
     transition: background-color 0.5s ease;
 }
 
 .banner__button:focus {
-    background-color: #840aa3;
+    background-color: var(--color-light-purple, #840aa3);
     transition: background-color 0.5s ease;
 }
 
 .banner__button:active {
-    background-color: #640aa3;
+    background-color: var(--color-blue-violet, #640aa3);
     transition: background-color 0.5s ease;
 }
 
@@ -114,24 +114,24 @@
 }
 
 .banner__arrow:hover {
-    background-color: #fff;
+    background-color: var(--color-white, #fff);
     border-radius: 50%;
-    color: #6c0287;
+    color: var(--color-purple, #6c0287);
     transition: background-color 0.4s ease, color 0.4s ease;
 }
 
 .banner__arrow:focus {
-    outline: 1px solid #cd06ff;
+    outline: 1px solid var(--color-bright-purple, #cd06ff);
     transition: background-color 0.4s ease, color 0.4s ease;
 }
 
 .banner__arrow:active {
-    background-color: #cd06ff;
-    color: #fff;
+    background-color: var(--color-bright-purple, #cd06ff);
+    color: var(--color-white, #fff);
     transition: background-color 0.4s ease, color 0.4s ease;
 }
 
 .banner__arrow:active > svg > circle {
-    stroke: #cd06ff;
+    stroke: var(--color-bright-purple, #cd06ff);
     transition: stroke 0.4s ease;
 }
