--- a/css/faq.css
+++ b/css/faq.css
@@ -18,8 +18,8 @@
 }
 
 .faq__item {
-    background-color: #FFF;
-    color: #1C1A1A;
+    background-color: var(--color-white, #fff);
+    color: var(--color-light-black, #1C1A1A);
     font-weight: 700;
     font-size: 24px;
     padding: 30px 70px;
@@ -28,8 +28,8 @@
 }
 
 .faq__item:nth-child(even) {
-    background-color: #440F51;
-    color: #FFF;
+    background-color: var(--color-dark-purple, #440f51);
+    color: var(--color-white, #fff);
 }
 
 .faq__item::after {
