--- a/css/header.css
+++ b/css/header.css
@@ -30,28 +30,28 @@
     font-weight: 700;
     font-size: 22px;
     text-transform: uppercase;
-    color: #fff;
+    color: var(--color-white, #fff);
     background-color: transparent;
-    border: 3px solid #cd06ff;
+    border: 3px solid var(--color-bright-purple, #cd06ff);
     border-radius: 10px;
     line-height: 30px;
 }
 
 .header__button:hover {
     border: 0;
-    background-color: #6c0287;
+    background-color: var(--color-purple, #6c0287);
     transition: background-color 0.4s ease;
 } 
 
 .header__button:focus {
     border: 0;
-    background-color: #6c0287;
+    background-color: var(--color-purple, #6c0287);
     transition: background-color 0.4s ease;
 }
 
 .header__button:active {
-    border: 1px solid #000;
-    background-color: #640aa3;
+    border: 1px solid var(--color-black, #000);
+    background-color: var(--color-blue-violet, #640aa3);
     transition: background-color 0.4s ease;
 }
 
